[package]
name = "graphrepresentations"
version = "0.0.1-alpha.1"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2018"

description = "A crate providing efficient abstract implementations of different graph representations"
documentation = "https://docs.rs/graphrepresentations"
repository = "https://github.com/ISibboI/graphrepresentations"
readme = "README.md"
keywords = ["graph", "representation", "adjacency", "efficient", "abstract"]
categories = ["data-structures", "science"]
license = "MIT"
license-file = "LICENSE"
maintenance = { status = "actively-developed" }

[lib]
path = "src/lib.rs"

[dependencies]
superslice = "1"